jQuery-File-Upload 6.9.1~core1

	* Initial version
	-- Charlie Powell <charlie@eval.bz>  20 Aug 2012